iniciando  optener los datos del formulario

--- a/src/views/registroMedicamento.html
+++ b/src/views/registroMedicamento.html
@@ -83,11 +83,11 @@
                             </div>
                             <div class="row my-3">
                                 <div class="mb-3 form-check ms-3">
-                                    <input type="checkbox" class="form-check-input" id="findesemana">
+                                    <input type="checkbox" class="form-check-input" id="copago">
                                     <label class="form-check-label">¿El medicamento tiene copago?</label>
                                 </div>
                             </div>
-                            <button class="btn btn-primary w-100">Registrar</button>
+                            <button class="btn btn-primary w-100" id="botonregistromedicamento">Registrar</button>
                         </form>
 
                     </div>
