--- a/src/views/registroMedico.html
+++ b/src/views/registroMedico.html
@@ -91,7 +91,7 @@
                                     <label class="form-check-label">¿Trabaja los fines de semana?</label>
                                 </div>
                             </div>
-                            <button class="btn btn-primary w-100">Registrar</button>
+                            <button class="btn btn-primary w-100" id="botonregistromedico">Registrar</button>
                         </form>
 
                     </div>
