--- a/src/views/registroPacientes.html
+++ b/src/views/registroPacientes.html
@@ -81,7 +81,7 @@
                                 </div>
                                 <div class="col-6">
                                     <label class="form-label">Grupo Ingreso:</label>
-                                    <select class="form-select" aria-label="Default select example">
+                                    <select class="form-select" id="grupoingresopaciente">
                                         <option selected>Selececiona  grupo de ingreso</option>
                                         <option value="a">A</option>
                                         <option value="b">B</option>
@@ -95,7 +95,7 @@
                                     <label class="form-check-label">¿El paciente tiene poliza?</label>
                                 </div>
                             </div>
-                            <button class="btn btn-primary w-100">Registrar</button>
+                            <button class="btn btn-primary w-100" id="botonregistrarpaciente">Registrar</button>
                         </form>
 
                     </div>
@@ -117,5 +117,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./../../assets/controller/controladorRegistroPaciente.js"></script>
 </body>
 </html>
