se creo funcionalidad de optener valores de formulario

--- a/src/views/registroMedico.html
+++ b/src/views/registroMedico.html
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="col-6">
                                     <label class="form-label">Correo</label>
-                                    <input type="text" class="form-control" id="correopaciente">
+                                    <input type="text" class="form-control" id="correomedico">
                                 </div>                           
                             </div>
                             <div class="row my-3">
@@ -109,3 +109,7 @@
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./../../assets/controller/controladorRegistroMedico.js"></script>
+</body>
