--- a/src/views/registroEnfermedad.html
+++ b/src/views/registroEnfermedad.html
@@ -41,7 +41,7 @@
         <main>
             <section class="container my-5">
                 <div class="row">
-                    <div class="col-12 col-md-8">
+                    <div class="col-12 col-md-8 align-self-center">
 
                         <form class="botder rounded shadow p-5">
 
@@ -67,11 +67,11 @@
                             </div>
                             <div class="row my-3">
                                 <div class="mb-3 form-check ms-3">
-                                    <input type="checkbox" class="form-check-input" id="findesemana">
+                                    <input type="checkbox" class="form-check-input" id="probabilidadvivir">
                                     <label class="form-check-label">¿Tiene probabilidad de vivir?</label>
                                 </div>
                             </div>
-                            <button class="btn btn-primary w-100">Registrar</button>
+                            <button class="btn btn-primary w-100" id="bontonenfermedad">Registrar</button>
                         </form>
 
                     </div>
@@ -89,3 +89,8 @@
     <footer>
 
     </footer>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./../../assets/controller/controladorRegistroEnfermedad.js"></script>
+</body>
