--- a/src/views/signovital.html
+++ b/src/views/signovital.html
@@ -3,67 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>suratech</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <link rel="stylesheet" href="../../assets/styles/estilos.css">
+    
 </head>
 <body>
-
     <header>
+        <nav class="navbar navbar-expand-lg navbar-dark menu">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="../../assets/img/logotipo.png" alt="logo" height="50" width="50">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
     </header>
-    <main>
-        <section class="container my-5">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-4 align-self-center animate__animated animate__backInLeft">
-                    <h3>MEDIMOS TUS SIGNOS VITALES</h3>
-                </div>
-                <div class="col-12 col-md-4 animate__animated animate__backInRight">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, soluta ad, consectetur sequi magnam pariatur necessitatibus mollitia quisquam sapiente exercitationem atque architecto excepturi. Voluptatibus non possimus quos alias ipsum placeat beatae laudantium eius commodi nemo magnam ipsam dolores iste reprehenderit laboriosam officiis facilis ullam rerum, earum amet velit odit. Sunt?
-                    </p>
-                </div>
-            </div>
-        </section>
+        <main>
+            <section class="container my-5">
+                <div class="row">
+                    <div class="col-12 col-md-8 align-self-center">
 
-        <section class="banner3">
+                        <form class="botder rounded shadow p-5">
 
-        </section>
+                            <div class="row">
+                                <div class="col-6">
+                                    <label class="form-label">Nombre:</label>
+                                    <input type="text" class="form-control" id="nombresignovital">
+                                </div>
+                                <div class="col-6">
+                                    <label class="form-label">valor:</label>
+                                    <input type="text" class="form-control" id="valorsignovital">
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-6">
+                                    <label class="form-label">Fecha medicion:</label>
+                                    <input type="date" class="form-control" id="fechamedicionsignovital">
+                                </div>
+                            </div>
+                            
+                            <button class="btn btn-primary w-100" id="bontonensignovital">Registrar</button>
+                        </form>
 
-        <section class="container my-5">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-4">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi a perspiciatis vero explicabo eveniet dolores at. Molestiae quia excepturi rerum ullam expedita sapiente ab quaerat illum ratione nam optio eveniet, maiores est ex voluptatibus dolore nostrum dolorem cumque placeat! Praesentium a voluptatum, ut in voluptatem vitae veritatis voluptas temporibus officiis.</p>
+                    </div>
+                    <div class="col-12 col-md-4 align-self-center">
+                        <h3>Registro signos vitales</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nihil commodi. Ratione, maxime reprehenderit. Iste, ipsum rem. Saepe ad rerum reiciendis similique quam dolore expedita, deserunt magni deleniti, placeat eveniet ipsum. Quas deserunt, perferendis dolorum dolorem eos molestias quidem culpa!
+                        </p>
+                        <img src="../../assets/img/enfermedad.jfif" alt="" class="img-fluid">
+                    </div>
                 </div>
-                <div class="col-12 col-md-4 align-self-center">
-                    <h3>DIAGNOSTICOS A TIEMPO</h3>
-                </div>
-            </div>
-        </section>
+            </section>
 
-        <section class="container-fluid menu p-3 text-white">
-            <div class="row">
-                <div class="col-12 col-md-5">
-                    <img src="../../assets/img/signos.png" alt="" class="img-fluid">
-                </div>
-                <div class="col-12 col-md-7">
-                    <form>
-
-                    </form>
-                </div>
-            </div>
-        </section>
-
-    </main>
+        </main>
     <footer>
 
     </footer>
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./../../assets/controller/controladorRegistroSignovital.js"></script>
 </body>
-</html>
