se añadiron los demas controladores de consulta que hacia falta

--- a/src/views/registroMedicamento.html
+++ b/src/views/registroMedicamento.html
@@ -58,7 +58,7 @@
                             <div class="row my-3">
                                 <div class="col-6">
                                     <label class="form-label">Dosis:</label>
-                                    <input type="text" class="form-control" id="dosismedicamento">
+                                    <input type="number" class="form-control" id="dosismedicamento">
                                 </div>
                                 <div class="col-6">
                                     <label class="form-label">Laboratorio:</label>
@@ -78,7 +78,7 @@
                             <div class="row my-3">
                                 <div class="col-6">
                                     <label class="form-label">Registro INVIMA:</label>
-                                    <input type="number" class="form-control" id="invima">
+                                    <input type="text" class="form-control" id="invima">
                                 </div>                                       
                             </div>
                             <div class="row my-3">
@@ -107,5 +107,5 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./../../assets/controller/controladorRegistroMedicamento.js"></script>
+    <script src="../controller/constroladorRegistros/controladorRegistroMedicamento.js"></script>
 </body>
