--- a/src/views/registroPacientes.html
+++ b/src/views/registroPacientes.html
@@ -117,6 +117,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="./../../assets/controller/controladorRegistroPaciente.js"></script>
+    <script src="../controller/constroladorRegistros/controladorRegistroPaciente.js"></script>
 </body>
 </html>
