se añadi el enrutamiento para navegar entre los registros y las consultas

--- a/src/views/registroPacientes.html
+++ b/src/views/registroPacientes.html
@@ -21,16 +21,32 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../../">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Registros
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./registroPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="./registroMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="./registroMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="./registroEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="./signovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Consultas
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../dashboard/dashboardPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardSignovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
                 </ul>
               </div>
@@ -102,7 +118,7 @@
                     <div class="col-12 col-md-4 align-self-center">
                         <h3>Registra nuestros pacientes</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nihil commodi. Ratione, maxime reprehenderit. Iste, ipsum rem. Saepe ad rerum reiciendis similique quam dolore expedita, deserunt magni deleniti, placeat eveniet ipsum. Quas deserunt, perferendis dolorum dolorem eos molestias quidem culpa!
+                          Nos alegra que formes parte de nuestra red de salud en SURA. A través de este sistema de registro, buscamos brindarte un acceso rápido y seguro a los servicios médicos que necesitas. Nuestro compromiso es velar por tu bienestar, ofreciéndote una atención integral y personalizada.
                         </p>
                         <img src="../../assets/img/paciente feliz.jpg" alt="" class="img-fluid">
                     </div>
