--- a/src/views/signovital.html
+++ b/src/views/signovital.html
@@ -21,16 +21,34 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../../">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                 
+                 
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Registros
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./registroPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="./registroMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="./registroMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="./registroEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="./signovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Consultas
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../dashboard/dashboardPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardSignovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
                 </ul>
               </div>
