--- a/src/views/registroEnfermedad.html
+++ b/src/views/registroEnfermedad.html
@@ -21,16 +21,32 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../../">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Registros
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./registroPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="./registroMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="./registroMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="./registroEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="./signovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Consultas
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../dashboard/dashboardPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardSignovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
                 </ul>
               </div>
@@ -52,31 +68,46 @@
                                 </div>
                                 <div class="col-6">
                                     <label class="form-label">Sintomas:</label>
-                                    <input type="number" class="form-control" id="sintomas">
+                                    <input type="text" class="form-control" id="sintomas">
                                 </div>
                             </div>
                             <div class="row my-3">
                                 <div class="col-6">
-                                    <label class="form-label">Calsificacion:</label>
-                                    <input type="text" class="form-control" id="clasificacionenfermedad">
+                                  <label class="form-label">Clasificación:</label>
+                                    <select class="form-select" id="clasificacionenfermedad">
+                                        <option selected>Selececiona  Clasificación</option>
+                                        <option value="infecciosa">Infecciosa</option>
+                                        <option value="cardiovascular">Cardiovascular</option>
+                                        <option value="respiratoria">Respiratoria</option>
+                                        <option value="digestiva">Digestiva</option>
+                                      </select>
                                 </div>
                                 <div class="col-6">
-                                    <label class="form-label">Grado:</label>
-                                    <input type="number" class="form-control" id="gradoenfermedad">
+                                  <label class="form-label">Grado:</label>
+                                  <select class="form-select" id="gradoenfermedad">
+                                      <option selected>Selececiona  Grado</option>
+                                      <option value="leve">Leve</option>
+                                      <option value="moderada">Moderada</option>
+                                      <option value="severa">Severa</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="row my-3">
-                                <div class="mb-3 form-check ms-3">
-                                    <input type="checkbox" class="form-check-input" id="probabilidadvivir">
+                              <div class="col-6">
+                                <label class="form-label">probabilidad Sobrevivir:</label>
+                                <input type="number" class="form-control" id="probabilidadvivir">
+                            </div>
+                                <!-- <div class="mb-3 form-check ms-3">
+                                    <input type="text" class="form-check-input" id="probabilidadvivir">
                                     <label class="form-check-label">¿Tiene probabilidad de vivir?</label>
-                                </div>
+                                </div> -->
                             </div>
                             <button class="btn btn-primary w-100" id="bontonenfermedad">Registrar</button>
                         </form>
 
                     </div>
                     <div class="col-12 col-md-4 align-self-center">
-                        <h3>Registra nuestros medicos</h3>
+                        <h3>Registro Enfermedad</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nihil commodi. Ratione, maxime reprehenderit. Iste, ipsum rem. Saepe ad rerum reiciendis similique quam dolore expedita, deserunt magni deleniti, placeat eveniet ipsum. Quas deserunt, perferendis dolorum dolorem eos molestias quidem culpa!
                         </p>
