--- a/src/views/registroMedicamento.html
+++ b/src/views/registroMedicamento.html
@@ -21,16 +21,32 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../../">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Registros
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="./registroPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="./registroMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="./registroMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="./registroEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="./signovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Consultas
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../dashboard/dashboardPacientes.html">Paciente</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedico.html">Medico</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardMedicamento.html">Medicamento</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardEnfermedad.html">Enfermedad</a></li>
+                      <li><a class="dropdown-item" href="../dashboard/dashboardSignovital.html">Signo Vital</a></li>
+                    </ul>
                   </li>
                 </ul>
               </div>
@@ -51,8 +67,13 @@
                                     <input type="text" class="form-control" id="nombremedicamento">
                                 </div>
                                 <div class="col-6">
-                                    <label class="form-label">Presentacion:</label>
-                                    <input type="text" class="form-control" id="presentacionmedicamento">
+                                  <label class="form-label">Presentacion:</label>
+                                    <select class="form-select" id="presentacionmedicamento">
+                                        <option selected>Seleccione presentacon</option>
+                                        <option value="pastilla">Pastilla</option>
+                                        <option value="ampolleta">Ampolleta</option>
+                                        <option value="suero">Suero</option>
+                                      </select>
                                 </div>
                             </div>
                             <div class="row my-3">
