se cambio mensajes de lorem por otros textos

--- a/src/views/registroEnfermedad.html
+++ b/src/views/registroEnfermedad.html
@@ -109,7 +109,7 @@
                     <div class="col-12 col-md-4 align-self-center">
                         <h3>Registro Enfermedad</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nihil commodi. Ratione, maxime reprehenderit. Iste, ipsum rem. Saepe ad rerum reiciendis similique quam dolore expedita, deserunt magni deleniti, placeat eveniet ipsum. Quas deserunt, perferendis dolorum dolorem eos molestias quidem culpa!
+                          Te agradecemos por elegirnos para registrar tu información de salud. Este proceso es fundamental para ofrecerte la mejor atención y seguimiento en tu bienestar. Por favor, proporciona todos los detalles solicitados para asegurar una atención adecuada. Si necesitas ayuda, nuestro equipo está aquí para asistirte.
                         </p>
                         <img src="../../assets/img/enfermedad.jfif" alt="" class="img-fluid">
                     </div>
