--- a/src/views/registroMedicamento.html
+++ b/src/views/registroMedicamento.html
@@ -113,9 +113,9 @@
 
                     </div>
                     <div class="col-12 col-md-4 align-self-center">
-                        <h3>Registra nuestros medicos</h3>
+                        <h3>Registra nuestros medicamentos</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nihil commodi. Ratione, maxime reprehenderit. Iste, ipsum rem. Saepe ad rerum reiciendis similique quam dolore expedita, deserunt magni deleniti, placeat eveniet ipsum. Quas deserunt, perferendis dolorum dolorem eos molestias quidem culpa!
+                          Estamos comprometidos con tu salud y bienestar. Aquí podrás registrar los medicamentos de forma sencilla y rápida. Asegúrate de ingresar toda la información requerida para garantizar un seguimiento adecuado y una atención de calidad. Si tienes alguna duda, no dudes en contactarnos.
                         </p>
                         <img src="../../assets/img/medicamento.webp" alt="" class="img-fluid">
                     </div>
