--- a/src/views/signovital.html
+++ b/src/views/signovital.html
@@ -87,7 +87,7 @@
                     <div class="col-12 col-md-4 align-self-center">
                         <h3>Registro signos vitales</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nihil commodi. Ratione, maxime reprehenderit. Iste, ipsum rem. Saepe ad rerum reiciendis similique quam dolore expedita, deserunt magni deleniti, placeat eveniet ipsum. Quas deserunt, perferendis dolorum dolorem eos molestias quidem culpa!
+                          Agradecemos tu confianza en nosotros para registrar tus signos vitales. Este proceso es esencial para monitorear tu salud y asegurar que recibas la atención que necesitas. Por favor, completa la información solicitada con precisión. Si requieres asistencia, nuestro equipo está listo para ayudarte.
                         </p>
                         <img src="../../assets/img/enfermedad.jfif" alt="" class="img-fluid">
                     </div>
